# AudioIpCodec

./: Cargo.toml  build-pjsip.sh  out.txt  test-static.sh
glade/: main_ui.glade  main_ui.glade~
gui_test/: Cargo.toml
gui_test/src/: main.rs
pj-sys/: Cargo.toml  build.rs  build.rs.bak  wrapper.h
pj-sys/src/: lib.rs
pjlib-util-sys/: Cargo.toml  build.rs  build.rs.bak
pjlib-util-sys/src/: lib.rs
pjmedia-audiodev-sys/: Cargo.toml  build.rs  build.rs.bak
pjmedia-audiodev-sys/src/: lib.rs
pjmedia-codec-sys/: Cargo.toml  build.rs
pjmedia-codec-sys/src/: lib.rs
pjmedia-sys/: Cargo.toml  build.rs  build.rs.bak  wrapper.h
pjmedia-sys/src/: lib.rs
pjmedia-videodev-sys/: Cargo.toml  build.rs
pjmedia-videodev-sys/src/: lib.rs
pjnath-sys/: Cargo.toml  build.rs  build.rs.bak
pjnath-sys/src/: lib.rs
pjproject/: Cargo.toml
pjproject/pj-sys/src/: lib.rs
pjproject/pjlib-util-sys/src/: lib.rs
pjproject/pjmedia-sys/src/: lib.rs
pjproject/pjnath-sys/src/: lib.rs
pjproject/pjsip-sys/src/: lib.rs
pjproject/src/: lib.rs  pj.rs  pjlib_util.rs  pjmedia.rs  pjnath.rs  pjsip.rs  pjsip_simple.rs  pjsip_ua.rs  pjsua.rs  prelude.rs  utils.rs
pjproject/src/pj/: auto.rs
pjproject/src/pjmedia/: auto.rs  codec.rs
pjproject/src/pjsip/: auto.rs
pjproject/src/pjsip_ua/: auto.rs
pjproject/src/pjsua/: account.rs  auto.rs  buddy.rs  call.rs  codec.rs  log.rs  media.rs  message.rs  transport.rs  ua.rs
pjsip-simple-sys/: Cargo.toml  build.rs  build.rs.bak
pjsip-simple-sys/src/: lib.rs
pjsip-sys/: Cargo.toml  build.rs
pjsip-sys/src/: lib.rs
pjsip-ua-sys/: Cargo.toml  build.rs
pjsip-ua-sys/src/: lib.rs
pjsua-sys/: Cargo.toml  build.rs
pjsua-sys/src/: lib.rs
src/: about.rs  account.rs  audio_line.rs  codec.rs  dialpad.rs  header.rs  helper.rs  main.rs  maintab.rs  pjdefault.rs  pjlib.rs  pjmedia.rs  pjproject.rs  pjsip.rs  pjsua.rs  settings.rs  settings_audio.rs  settings_buffer.rs  settings_call.rs  settings_dns.rs  settings_ice.rs  settings_media.rs  settings_proxy.rs  settings_stun.rs  settings_tls.rs  settings_turn.rs  settings_ua.rs  sipcore.rs  sipua.rs  status.rs
src/pjproject/: pjdefault.rs  pjlib.rs  pjmedia.rs  pjsip.rs  pjsua.rs  prelude.rs  utils.rs
src/sipua/: prelude.rs  sip_account.rs  sip_buddy.rs  sip_calls.rs  sip_codec.rs  sip_core.rs  sip_log.rs  sip_media.rs  sip_module.rs  sip_presence.rs  sip_tones.rs  sip_transport.rs  sip_ua.rs  sip_wav.rs
test-import/: Cargo.toml
test-sys/: Cargo.toml  build.rs  wrapper.h
