[package]
name = "open_audio_ip_codec"
version = "0.1.0"
authors = ["tamara"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pjproject = { path = "./pjproject" }
pj-sys = { path = "./pj-sys" }
pjmedia-sys = { path = "./pjmedia-sys" }
pjmedia-audiodev-sys = { path = "./pjmedia-audiodev-sys" }
pjmedia-codec-sys = { path = "./pjmedia-codec-sys" }
pjsip-sys = { path = "./pjsip-sys" }
pjsip-ua-sys = { path = "./pjsip-ua-sys" }
pjsip-simple-sys = { path = "./pjsip-simple-sys" }
pjsua-sys = { path = "./pjsua-sys" }
configparser = "1.0.0"
systemstat = "0.1.7"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[dependencies.glib]
version = ""
features = ["v2_44"]

[dependencies.gdk]
version = ""
features = ["v3_16"]

[build-dependencies]
