[package]
name = "pjproject"
version = "0.1.0"
authors = ["dickytamara <dickytamara@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pj-sys = { path = "../pj-sys" }
pjmedia-sys = { path = "../pjmedia-sys" }
pjsip-sys = { path = "../pjsip-sys" }
pjsip-simple-sys = { path = "../pjsip-simple-sys" }
pjsua-sys = { path = "../pjsua-sys" }